--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ body {
     #content{
         margin: 5px;
     }
+    #content img {
+        max-height: 100vh;
+    }
 }
 @media screen and (max-width: 830px) {
     #content{
